# dns-gazer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Pipfile  README.md
src/: dns.cc  dns.hpp  gazer.cc  optparse.cc  optparse.hpp  utils.cc  utils.hpp
tests/: sample.pcap  test_file.py  test_logging.py  test_remote.py  test_utils.py
tests/helper/: proc.py  tcp_server.py
